# pwn

./: BaseOrg.cpp  BaseOrg.h  CMakeLists.txt  Chamber.cpp  Chamber.h  Discipline.cpp  Discipline.h  FacultiesDataBase.cpp  FacultiesDataBase.h  Faculty.cpp  Faculty.h  MSU.txt  RegularFaculty.cpp  RegularFaculty.h  SUBD.cpp  SUBD.h  SectoralFaculty.cpp  SectoralFaculty.h  main.cpp
